src/components/Main/Main.scss
@font-face {
    font-family:'modern';
    src: url('../../assets/fonts/Modern.otf') format('opentype');
}
*{
    font-family: 'modern';
}
.background-top{
    width: 100vw;
    height: 80vh;
    filter: brightness(50%);
}
.background-bottom{
    position: relative;
    top: -3px;
    width: 100vw;
    height: 20vh;
    filter: brightness(50%);
    z-index:2;
}
.overlay{
    position: absolute;
    width: 100vw;
    height: 100vh;
    
    z-index:3;
}
.overlay2{
    position: absolute;
    width: 100vw;
    height: 100vh;
    
    z-index:7;
}
.main{
    background-color: rgb(5,5,3);
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
}
body{
    overflow-x: hidden;
}
// *{
//     width: 100vw;
//     height: 100vh;
//     overflow: hidden;
// }
.heading{
    color: white;
    font-size: 3.5rem;
    @media (min-width: 1920px){
        width: 450px;
        font-size: 5rem;
    }
    @media (min-width: 320px) and (max-width: 600px){
        font-size: 2.5rem;
        width: 90%
    }
    width: 450px;
    word-wrap: break-word;
    text-align: center;
    &--wrap{
        z-index: 4;
        position: absolute;
        top: 30vh;
        width: 100vw;
        display: flex;
        justify-content: center;
        
    }
}
.button{
    
    border-radius: 20%;
    background: none;
    color: white;
    border:none;
    width: 150px;
    height: 50px;
    z-index: 8;
    @media (min-width: 725px) and (max-width: 1359px){
        
        font-size: 1.5rem;
    }
    @media (min-width: 320px) and (max-width: 724px){
        width: 49vw;
        font-size: 1rem;
    
    }
    @media (min-width: 1360px) and (max-width: 1919px) {
        font-size: 2rem; 
    }
    @media (min-width: 1920px){
        font-size: 3rem;
    }
    &:hover{
        border: 1px solid white;
        @media(min-width: 300px) and (max-width: 500px){
            border: none;
         }

    }
    &:focus{
        outline:none;
    }
    &--link{
        z-index: 8;
        // width: 10vw;
        // height: 5vh;
        // border-radius: 20%;
    }
    &--wrap{
        display: flex;
        position: absolute;
        top: 70vh;
        width: 99%;
        height: 60px;
        justify-content: space-around;
        align-items: baseline;
        z-index: 8;
        @media (min-width: 320px) and (max-width: 600px){
            width: 99vw;
            height: 60px;
            justify-content: space-around;
        }
    }
}
.bird {
	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells.svg);
	background-size: auto 100%;
	width: 44px;
	height: 68px;
	will-change: background-position;
    position: absolute;
    top: 20vh;
    @media (max-width: 500px){
        top: 70vh;
    }
	animation-name: fly;
	
	animation-timing-function: steps(10);
    animation-iteration-count: infinite;
    &--one {
		animation-duration: 1s;
		animation-delay: -0.5s;		
	}
	
	&--two {
		animation-duration: 0.9s;
		animation-delay: -0.75s;
    }
    &--three {
		animation-duration: 1.25s;
		animation-delay: -0.25s;
	}
	
	&--four {
		animation-duration: 1.1s;
		animation-delay: -0.5s;
	}
    &--wrap{
            position: absolute;
            top: 20%;
            left: -10%;
            transform: scale(0) translateX(-10vw);
            will-change: transform;
            
            animation-name: fly-right-one;
            animation-timing-function: linear;
            animation-iteration-count: infinite;
            
            &--one {
                animation-duration: 15s;
                animation-delay: 0;
            }
            
            &--two {
                animation-duration: 16s;
                animation-delay: 1s;
            }
            
            &--three {
                animation-duration: 14.6s;
                animation-delay: 9.5s;
            }
            
            &--four {
                animation-duration: 16s;
                animation-delay: 10.25s;
            }
        
        
    }
}



@keyframes fly {
	
	100% {
		background-position: -500px 0;
	}
	
}
@keyframes fly-right-one {
	
	0% {
		transform: scale(0.3) translateX(-10vw);
	}
	
	10% {
		transform: translateY(2vh) translateX(10vw) scale(0.4);
	}
	
	20% {
		transform: translateY(0vh) translateX(30vw) scale(0.5);
	}
	
	30% {
		transform: translateY(4vh) translateX(50vw) scale(0.6);
	}
	
	40% {
		transform: translateY(2vh) translateX(70vw) scale(0.6);
	}
	
	50% {
		transform: translateY(0vh) translateX(90vw) scale(0.6);
	}
	
	60% {
		transform: translateY(0vh) translateX(110vw) scale(0.6);
	}
	
	100% {
		transform: translateY(0vh) translateX(110vw) scale(0.6);
	}
	
}
@keyframes fly-right-two {
	
	0% {
		transform: translateY(-2vh) translateX(-10vw) scale(0.5);
	}
	
	10% {
		transform: translateY(0vh) translateX(10vw) scale(0.4);
	}
	
	20% {
		transform: translateY(-4vh) translateX(30vw) scale(0.6);
	}
	
	30% {
		transform: translateY(1vh) translateX(50vw) scale(0.45);
	}
	
	40% {
		transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
	}
	
	50% {
		transform: translateY(0vh) translateX(90vw) scale(0.45);
	}
	
	51% {
		transform: translateY(0vh) translateX(100vw) scale(0.45);
	}
	
	100% {
		transform: translateY(0vh) translateX(100vw) scale(0.45);
	}
	
}
.arrow{
    width: 3rem;
    height: 3rem;
    margin-top: 5rem;
}

